--- a/72771-h/72771-h.htm
+++ b/72771-h/72771-h.htm
@@ -4382,7 +4382,7 @@ it?”</p>
 <p>“No good for us, Sergeant. Now about these
 others. Mr. Pyke was not married, was he?”</p>
 
-<p>No, Mr. Pyke was not married, nor were Mr.
+<p>“No, Mr. Pyke was not married, nor were Mr.
 Cowls nor Mr. Samuel nor Mr. Leacock, other
 young men about the works with whom Mrs.
 Berlyn had seemed on good terms. Mr. Pyke had been
@@ -4390,7 +4390,7 @@ with the firm for several years and was said to be
 highly thought of. He was pleasant-mannered and
 jolly and a general favourite. He lodged in the
 town; in fact, his rooms were nearly opposite the
-hotel.</p>
+hotel.”</p>
 
 <p>“Is Mrs. Berlyn still here?”</p>
 
@@ -11736,3 +11736,4 @@ the original.</p>
 
 </body>
 </html>
+
